[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/background/horror.PNG" type="Texture" id=2]
[ext_resource path="res://assets/background/blood.png" type="Texture" id=3]
[ext_resource path="res://assets/background/black_blood.png" type="Texture" id=4]
[ext_resource path="res://sounds/dark-ambient-atmosphere-1-141313.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/fontes/Achafont.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 400, 290 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 400, 290 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 1
font_data = ExtResource( 6 )

[node name="Tela_Inicial" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 459, 310 )
scale = Vector2( 0.992462, 0.992462 )
texture = ExtResource( 2 )

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 86.0
margin_top = 45.0
margin_right = 926.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 1 )
text = "FREE ME, DARLING"

[node name="Button" type="Button" parent="."]
margin_left = 330.0
margin_top = 503.0
margin_right = 500.0
margin_bottom = 575.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 4 )

[node name="Start" type="Label" parent="."]
margin_left = 366.0
margin_top = 498.0
margin_right = 487.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 2 )
text = "JOGAR"

[node name="Button2" type="Button" parent="."]
margin_left = 636.0
margin_top = 508.0
margin_right = 773.0
margin_bottom = 577.0
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 5 )

[node name="Exit" type="Label" parent="."]
margin_left = 655.0
margin_top = 502.0
margin_right = 741.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 3 )
text = "SAIR"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="ready" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_ready"]
